# prop-pulse

./: .gitignore  .replit  README.md  compose.yaml  monitoring.ipynb  openapi.json  package-lock.json  package.json  pyproject.toml  run.py
server/: .dockerignore  .gitignore  Dockerfile  __init__.py  auth.ts  database.py  db.ts  entrypoint.sh  init_construction_status.py  init_db.py  main.py  models.py  pyproject.toml  routes.ts  schemas.py  storage.ts
server/routes/: loans.py  payments.py  properties.py  purchases.py  repayments.py  users.py
server/src/: init_construction_status.py  main.py  models.py
server/src/database/: __init__.py  alembic.ini  base.py  init_construction_status.py  init_db.py  init_views.py  models.py  scripts.py  views.py
server/src/database/migrations/: env.py
server/src/database/migrations/versions/: 2025_04_06_1906-afc7858f2028_stag_test.py  2025_04_07_1504-a20637df15eb_loan_model_update.py  2025_04_07_1522-7f8c186ee3c7_loan_name_change_to_loan_number.py
server/src/routes/: __init__.py  invoices.py  loans.py  payment_sources.py  payments.py  properties.py  purchases.py  repayments.py  users.py
server/src/schemas/: __init__.py  construction_status.py  dashboard.py  documents.py  invoices.py  loans.py  payment_sources.py  payments.py  properties.py  purchases.py  repayments.py  users.py
server/tests/: README.md  conftest.py  run_tests.sh  test_utils.py
server/tests/routes/: __init__.py  test_invoices.py  test_loans.py  test_payment_sources.py  test_payments.py  test_properties.py  test_purchases.py  test_repayments.py
(+80 files in other folders)
